god damn it Denys

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -43,7 +43,7 @@
                 <li><a href="/static/Manual(teacher).pdf" download>Teacher Manual</a></li>
             {% endif %}
             {% if role == 0 %}
-                <li><a href="/statsic/Manual(admin).pdf" download>Admin Manual</a></li>
+                <li><a href="/static/Manual(admin).pdf" download>Admin Manual</a></li>
             {% endif %}
           </ul>
       </div>
